--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Katlego Mailula</title>
-    <Link rel="icon" href="/mylogo.png" type="image/png"/>
+    <Link rel="icon" href="/mylogo.jpg" type="image/png"/>
   </head>
   <body>
     <div id="root"></div>
