add chess app, set theme-color for mobile devices

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#111"/>
+    <meta name="msapplication-navbutton-color" content="#111"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
     <title>Katlego Mailula</title>
     <Link rel="icon" href="/mylogo.jpg" type="image/png"/>
   </head>
